# WeeHub

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cargo.toml  README.md  app.go  go.mod  hello.c  imgui.ini  main.go  package-lock.json  rebuild.sh  vcpkg.json  wails.json
cursor/: cursor.go
frontend/: backup-package.json  package-lock.json  package.json  package.json.md5
frontend/src/: App.tsx  main.tsx  style.css
frontend/src/assets/: cursor.cur
frontend/src/assets/nightsintodreams/: NightsIntoDreams.mym
frontend/src/assets/nightsintodreams/NightsIntoDreams/brlyt/: it_Button_a.brlyt  it_ObjChannelEdit_a.brlyt  it_ObjCubeEdit_a.brlyt  it_ObjSetUp_a.brlyt  mn_SdcardMenuBanner_bc.brlyt  mn_SdcardMenu_Page.brlyt  mn_SdcardMenu_a.brlyt  mn_SdcardMenu_b.brlyt  my_ChTop_a.brlyt  my_Clock_a.brlyt  my_IplTop_a.brlyt  my_IplTop_c.brlyt  my_IplTop_e.brlyt
frontend/src/assets/wii-pointer-set/: readme.txt
frontend/src/components/: CloseButton.tsx  TabBar.css  TabBar.tsx  itemimg.tsx
frontend/src/components/wiigrid/: WiiGrid.css  WiiGrid.tsx
frontend/src/pages/: Home.tsx
src/: CMakeLists.txt  main.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/core/: App.cpp  App.h  Window.cpp  Window.h  test.cpp
src/renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/scene/: MenuScene.cpp  MenuScene.h  Scene.h  SceneManager.cpp  SceneManager.h
src/ui/: Channel.h  ChannelGrid.h  frameContext.cpp  frameContext.hpp
src/ui/classes/: frame.cpp  frame.hpp
src/ui/frames/: bootFrame.cpp  bootFrame.hpp  testFrame.cpp  testFrame.hpp  testFrame2.cpp  testFrame2.hpp
src/ui/util/: frame.cpp  frame.hpp  imageLoader.cpp  imageLoader.hpp  inputManager.cpp  inputManager.hpp  shader.cpp  shader.hpp
src/utils/: Color.h  Input.h  Timer.h
